log
Thu 16 May 2024 02:21:15 AM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:67:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
   67 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
e3326ff
Thu 16 May 2024 04:16:00 PM UTC: 
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:67:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
   67 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
c02a123
Thu 16 May 2024 04:59:59 PM UTC: 
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:67:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
   67 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
e881960
Thu 16 May 2024 05:05:08 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
8c7deca
Thu 16 May 2024 08:12:44 PM UTC: 
 sudoku.c | 37 +++++++++++++++++++++++++++++++++++--
 1 file changed, 35 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
cf70f87
Thu 16 May 2024 08:16:01 PM UTC: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  5|3
total_score: 35/70
07f6735
Thu 16 May 2024 08:18:32 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
7efa64f
Thu 16 May 2024 08:24:32 PM UTC: 
 sudoku.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘subMatriz’:
sudoku.c:76:21: error: expected ‘,’ or ‘;’ before ‘:’ token
   76 |       int a[9] = {0}:
      |                     ^
sudoku.c:77:20: error: statement with no effect [-Werror=unused-value]
   77 |       for(p = 0; p < 9; p++){
      |                  ~~^~~
sudoku.c:77:28: error: expected ‘;’ before ‘)’ token
   77 |       for(p = 0; p < 9; p++){
      |                            ^
      |                            ;
sudoku.c:77:28: error: expected statement before ‘)’ token
cc1: all warnings being treated as errors
Compilation failed
1ffba55
Thu 16 May 2024 08:25:27 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
c2ce9e6
Thu 16 May 2024 08:26:49 PM UTC: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:99:1: error: control reaches end of non-void function [-Werror=return-type]
   99 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
783ae99
Thu 16 May 2024 08:27:20 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|2
total_score: 45/70
f9a458a
Thu 16 May 2024 08:29:57 PM UTC: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c8a7f10
Thu 16 May 2024 08:30:40 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
fbaffc4
